// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing ReassignLocationMenu component renders as expected 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Component
    size="large"
  />
  <StatusBar
    animated={false}
    barStyle="default"
    showHideTransition="fade"
  />
</Component>
`;

exports[`Testing ReassignLocationMenu component renders as expected 2`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Component
    size="large"
  />
  <StatusBar
    animated={false}
    barStyle="default"
    showHideTransition="fade"
  />
  <Component>
    with a message
  </Component>
</Component>
`;
